# tree_diff

./: .gitignore  Circ.ipynb  Higgs_boson_out_of_dist.ipynb  High_boson.py  Merge_NN.py  README.md  analysis.ipynb  cifar_catdog.ipynb  cpu_job.sh  cpu_job1.sh  cpu_job1_ood.sh  cpu_job2.sh  cpu_job2_ood.sh  cpu_job3.sh  cpu_job3_ood.sh  data_cifarcatdog.npz  data_higgs.npz  data_scripts.sh  dodo.py  experiment2.py  gpu_job.sh  higgs_boson_out_of_dist.py  keep_regrow_test.py  merge_results.csv  profile.sh  profile_to_csv.py  pyproject.toml  requirements.txt  test_NN.py  test_NN_vis.py  vis_job.sh  weights_and_biases_cifarcatdog.npz  weights_and_biases_randinit_higgs.npz  weights_and_biases_randinit_higgs2.npz  weights_and_biases_subset_higgs.npz  weights_and_biases_subset_higgs2.npz
notebooks/: Decision Tree Implementation.ipynb  EFDT Issue.ipynb  Evaluation.ipynb  High_boson.ipynb  Keep-Regrow Demo.ipynb  Merge_NN.ipynb  Rule_Set_Similarity_Metric.ipynb  Similarity Score Issues - Exception for trees with single node.ipynb  Similarity Score Issues - VFDT.ipynb  Similarity Score Issues - Wrong results for EFDT trees.ipynb  Similarity Score Issues.ipynb  Train ML Models Interpretable Deltas .ipynb  cpu_job.sh  data_higgs.npz  experiment2_analysis.ipynb  weights_and_biases_higgs.npz  weights_and_biases_higgs2.npz
tree_diff/: __init__.py  __main__.py  config.py  config.yaml  conversion.py  cost_tree.py  file_system_runner.py  keep_regrow_alg.py  rule_entities.py  similar_tree.py  training_utils.py  tree.py  tree_metrics.py  tree_ruleset_conversion.py
(+3 files in other folders)
