[tool.poetry]
name = "tree_diff"
version = "0.0.1"
description = "Tree Diff for incremental learning"
authors = ["Scott Barnett"]

[tool.poetry.dependencies]
python = "^3.8"
river = "^0.14.0"
scikit-learn = "^1.2.0"

# rulecosi+ dependencies
gmpy2 = "^2.1.5"
bitarray = "^2.6.1"
imodels = "^1.3.12"
graphviz = "^0.20.1"


[tool.poetry.dev-dependencies]
surround = "0.1.2"
doit = "0.31.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
